--- a/app/src/main/res/layout/player_bottom_sheet.xml
+++ b/app/src/main/res/layout/player_bottom_sheet.xml
@@ -3,6 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+        <variable
+            name="data"
+            type="com.example.calmsleep.viewmodel.MusicViewModel" />
+        <import type="android.view.View"/>
+    </data>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -168,10 +174,23 @@
                 android:layout_width="@dimen/_18sdp"
                 android:layout_height="@dimen/_18sdp"
                 android:layout_marginStart="@dimen/_27sdp"
-                android:src="@drawable/bg_download"
+                android:src="@drawable/download_ic"
+                android:visibility="@{data.isSearchingData() ? View.INVISIBLE : View.VISIBLE}"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_icon_loop"
                 app:layout_constraintStart_toEndOf="@+id/iv_icon_loop"
                 app:layout_constraintTop_toTopOf="@+id/iv_icon_loop"
+                tools:ignore="ContentDescription" />
+
+            <ProgressBar
+                android:id="@+id/iv_icon_pro"
+                android:layout_width="@dimen/_18sdp"
+                android:layout_height="@dimen/_18sdp"
+                android:src="@drawable/bg_download"
+                android:visibility="@{data.isSearchingData() ? View.VISIBLE : View.INVISIBLE}"
+                app:layout_constraintBottom_toBottomOf="@+id/iv_icon_download"
+                app:layout_constraintEnd_toEndOf="@+id/iv_icon_download"
+                app:layout_constraintStart_toStartOf="@+id/iv_icon_download"
+                app:layout_constraintTop_toTopOf="@+id/iv_icon_download"
                 tools:ignore="ContentDescription" />
 
             <ImageView
