--- a/app/src/main/res/layout/fragment_alarm.xml
+++ b/app/src/main/res/layout/fragment_alarm.xml
@@ -362,7 +362,7 @@
                         android:layout_marginStart="@dimen/_15sdp"
                         android:fontFamily="@font/ko2"
                         android:gravity="center_vertical"
-                        android:text="@string/pay_developers_a_tip"
+                        android:text="@string/contact_us"
                         android:textColor="@color/color_white"
                         android:textSize="@dimen/_10sdp"
                         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
